syntax = "proto3";

package datapace;

import "common.proto";

service AccessService {
    rpc Partners(ID) returns (PartnersList) {}
    rpc PotentialPartners(ID) returns (PartnersList) {}
}

message PartnersList {
    repeated string value = 1;
}
